# OpenEnv_Hackathon

./: Dockerfile  Procfile  README (1).md  README.md  README.py  app.py  ci.yml  docker-compose.py  docker-compose.yml  environment.py  graders.py  inference.py  models.py  openenv.py  openenv.yaml  pyproject.toml  ruff.toml  run_eval.py  run_eval.sh  setup_repo.py  setup_repo.sh  tasks.py  validate_local.py
.github/workflows/: ci.yml
files (1)/: Dockerfile  README.md  app.py  inference.py  requirements.txt  run_eval.sh  test_graders.py  validate_local.py
tests/: test_graders.py  test_suite.py  validate_local.py
