[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-triage-openenv"
version = "1.0.0"
description = "Customer support triage RL environment following the OpenEnv specification"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["reinforcement-learning", "openenv", "huggingface", "customer-support", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "openai==1.35.7",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Likey13/OpenEnv_Hackathon"
Repository = "https://github.com/Likey13/OpenEnv_Hackathon"
"Bug Tracker" = "https://github.com/Likey13/OpenEnv_Hackathon/issues"

# Flat-file layout — all modules live in the repo root, not inside a package folder
[tool.setuptools]
py-modules = ["app", "environment", "graders", "inference", "models", "tasks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
